--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+    </style>
+    <script>
+       function me(){
+            confirm("tarada :))")
+        }
+    </script>
 </head>
 <body>
     <center><h1 style="color: chartreuse;">TỚ biết bạn hòe sẽ ghé qua mình</h1></center>
     <center><h1>Hòe rất thông minh và dễ tính :))</h1></center>
+    <center><h3 onclick="me()">click vo day xem ne</h3></center>
 </body>
 </html>
